--- a/RSColorPicker/QPColorTemperaturePicker-Info.plist
+++ b/RSColorPicker/QPColorTemperaturePicker-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>me.rsullivan.apps.rscolorpicker.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>me.qingpei.apps.qpcolortemperaturepicker.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
